# links-notation

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  FINAL_TEST_EQUIVALENCE_ANALYSIS.md  FORMATTER_AND_ROUNDTRIP_TEST_ANALYSIS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  ISSUES.md  README.md  README.ru.md  SECURITY.md  SYNCHRONIZATION_COMPLETE.md  TEST_CASE_COMPARISON.md  TEST_COVERAGE_SUMMARY.md  TEST_EQUIVALENCE_ANALYSIS.md  TEST_IMPLEMENTATION_REALITY.md  TEST_NAME_STANDARDIZATION_DETAILED_PLAN.md  TEST_NAME_STANDARDIZATION_RECOMMENDATIONS.md  TEST_PARITY_ACTION_ITEMS.md  TEST_STANDARDIZATION_PLAN.md  TRUE_IMPLEMENTATION_GAPS.md
.githooks/: README.md  install-hooks.sh  pre-commit
.github/: dependabot.yml
benchmarks/: BENCHMARK_RESULTS.md  README.md  benchmark_results.json
csharp/: Link.Foundation.Links.Notation.sln  README.html  README.md  full_test_log.txt  index.json  manifest.json  test_results.txt  xrefmap.yml
examples/: js_streaming_parser.js  rust_streaming_parser.rs
experiments/: SOLUTION_SUMMARY.md  analyze_test_coverage.py  create_test_case_comparison.py  critical_test_mismatches.txt  debug_js_parser.js  debug_parser.cs  debug_peg_direct.js  detailed_comparison_matrix.py  find_missing_single_line_tests.py  generate_python_tests.py  missing_tests_report.json  multi_reference_design.md  standardize_test_names.py  test_coverage_data.json  test_hyphenated_words.js  test_indentation_consistency.md  test_macro_output.rs  test_multi_reference.js  test_multi_reference.py  test_name_analysis.txt  test_punctuation_current.js  test_punctuation_new.js  test_rust_indentation.rs  test_specific_cases.rs  test_timeout_verification.py  test_universal_quotes.js  test_universal_quotes_grammar_v8.pegjs  test_unlimited_quotes.js  test_unlimited_quotes.py  test_unlimited_quotes.rs  test_unlimited_quotes_esm.js
go/: README.md  format_config.go  go.mod  lino.go  lino_test.go  multi_ref_test.go  parser.go
java/: README.md  README.ru.md  pom.xml
js/: .eslintrc.json  .prettierignore  README.md  README.ru.md  eslint.config.js  index.d.ts  package-lock.json  package.json  tsconfig.json
python/: .flake8  README.md  pyproject.toml  run_tests.py  setup.cfg
python/links_notation/: __init__.py  formatter.py  link.py  parser.py  tokenizer.py
python/tests/: test_api.py  test_edge_case_parser.py  test_format_config.py  test_indentation_consistency.py  test_indented_id_syntax.py  test_link.py  test_links_group.py  test_mixed_indentation_modes.py  test_multi_quote_parser.py  test_multi_reference.py  test_multiline_parser.py  test_multiline_quoted_string.py  test_nested_parser.py  test_nested_self_reference.py  test_single_line_parser.py  test_tokenizer.py
rust/: Cargo.toml  README.md
rust/links-notation/: Cargo.toml  README.md
rust/links-notation-benchmark/: Cargo.toml
rust/links-notation-benchmark/src/: main.rs
rust/links-notation-macro/: Cargo.toml
rust/links-notation-macro/src/: lib.rs  tests.rs
rust/links-notation/examples/: leading_spaces_test.rs  tuple_conversion.rs
rust/links-notation/src/: lib.rs
rust/links-notation/tests/: api_tests.rs  format_config_tests.rs  indentation_consistency_tests.rs  link_tests.rs  mixed_indentation_modes_tests.rs  multi_quote_parser_tests.rs  multiline_parser_tests.rs  nested_parser_tests.rs  nested_self_reference_tests.rs  tuple_tests.rs
scripts/: analyze-test-equivalence.mjs  (+2 more)
(+177 files in other folders)
