[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "links-notation"
version = "0.13.0"
description = "Python implementation of the Links Notation parser"
readme = "README.md"
license = {text = "Unlicense"}
authors = [
    {name = "Link.Foundation", email = "drakonard@gmail.com"}
]
keywords = ["lino", "parser", "links", "notation", "protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-timeout>=2.1"]
lint = ["black>=24.1", "isort>=5.13", "flake8>=7.0"]
dev = ["pytest>=7.0", "pytest-timeout>=2.1", "black>=24.1", "isort>=5.13", "flake8>=7.0"]

[project.urls]
Homepage = "https://github.com/link-foundation/links-notation"
Repository = "https://github.com/link-foundation/links-notation"
Issues = "https://github.com/link-foundation/links-notation/issues"

[tool.setuptools]
packages = ["links_notation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
timeout = 60
timeout_func_only = true

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
