[package]
name = "links-notation-benchmark"
version = "0.1.0"
edition = "2021"
description = "UTF-8 character count benchmarks comparing Links Notation with JSON, YAML, and XML"
license = "Unlicense"
repository = "https://github.com/link-foundation/links-notation"
publish = false

[[bin]]
name = "benchmark"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
